--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@reduxjs/toolkit": "^2.0.1",
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "yup": "^1.3.2"
@@ -41,4 +42,4 @@
     "vite": "^5.0.5",
     "vitest": "^1.0.1"
   }
-} 
+}
