--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "B2B E-commerce platform for AliTools",
   "main": "index.js",
   "scripts": {
-    "install:all": "npm install && cd client && npm install && cd ../server && npm install",
+    "install:all": "npm install && cd server && npm install && cd ../client && npm install",
     "build:client": "cd client && npm run build",
     "build:server": "cd server && npm run build",
     "build": "npm run build:server && npm run build:client",
     "start": "cd server && npm start",
-    "dev:client": "cd client && npm run dev",
-    "dev:server": "cd server && npm run dev",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "test": "cd server && npm test"
+    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
+    "test": "cd server && npm test",
+    "vercel-build": "npm run build"
   },
   "keywords": [
     "b2b",
