--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,14 @@
     "start": "node dist/index.js",
     "db:migrate": "sequelize-cli db:migrate",
     "db:migrate:undo": "sequelize-cli db:migrate:undo",
+    "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
+    "db:seed:all": "sequelize-cli db:seed:all",
+    "db:seed:undo:all": "sequelize-cli db:seed:undo:all",
+    "db:seed:prod": "node dist/scripts/seed-db.js",
+    "db:migrate:prod": "node dist/scripts/migrate-db.js",
+    "db:test-indexes": "babel-node src/scripts/test-indexes.js",
+    "db:reset": "npm run db:migrate:undo:all && npm run db:migrate && npm run db:seed:all",
+    "vercel-build": "npm run build && npm run db:migrate:prod",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:unit": "jest --testPathPattern=tests/unit",
@@ -21,15 +29,15 @@
     "alitools",
     "api"
   ],
-  "author": "AliTools",
+  "author": "AliTools Dev Team",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
@@ -38,20 +46,21 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "qrcode": "^1.5.3",
-    "sequelize": "^6.35.2",
+    "sequelize": "^6.37.1",
     "speakeasy": "^2.0.0",
+    "umzug": "^3.7.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.27.1",
-    "@babel/node": "^7.23.6",
-    "@babel/preset-env": "^7.27.1",
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.24.0",
+    "@babel/node": "^7.23.9",
+    "@babel/preset-env": "^7.24.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.1.0",
     "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.7",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.4"
   }
 }
