--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.6",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.0.4",
