--- a/.taskmasterconfig
+++ b/.taskmasterconfig
@@ -1,8 +1,8 @@
 {
   "models": {
     "main": {
-      "provider": "openrouter",
-      "modelId": "google/gemma-3-27b-it:free",
+      "provider": "google",
+      "modelId": "gemini-2.0-flash",
       "maxTokens": 120000,
       "temperature": 0.2
     },
