--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "serve": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:unit": "vitest run src/tests/unit",
+    "test:integration": "vitest run src/tests/integration",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -25,10 +28,13 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
+    "react-to-print": "^3.1.0",
+    "react-toastify": "^11.0.5",
+    "uuid": "^11.1.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.42",
@@ -38,7 +44,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jsdom": "^23.0.1",
+    "jsdom": "^23.2.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.5",
