--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,10 @@
     "test:watch": "jest --watch",
     "test:unit": "jest --testPathPattern=tests/unit",
     "test:integration": "jest --testPathPattern=tests/integration",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:geko": "jest --config=jest.config.js tests/integration/geko-api.test.js",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "keywords": [
     "b2b",
@@ -32,6 +35,7 @@
   "author": "AliTools Dev Team",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -43,13 +47,17 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "qrcode": "^1.5.3",
     "sequelize": "^6.37.1",
     "speakeasy": "^2.0.0",
     "umzug": "^3.7.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.17.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
@@ -57,9 +65,13 @@
     "@babel/node": "^7.23.9",
     "@babel/preset-env": "^7.24.0",
     "babel-jest": "^29.7.0",
+    "chai": "^4.5.0",
     "jest": "^29.7.0",
+    "mocha": "^10.8.2",
     "nodemon": "^3.1.0",
+    "nyc": "^15.1.0",
     "sequelize-cli": "^6.6.2",
+    "sinon": "^15.2.0",
     "sqlite3": "^5.1.7",
     "supertest": "^6.3.4"
   }
