--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,17 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.2.0",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.6",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
