--- a/client/package.json
+++ b/client/package.json
@@ -23,12 +23,14 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^8.2.0",
+    "@mui/x-date-pickers-pro": "^8.2.0",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.6",
     "date-fns": "^4.1.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
