--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "esm": "^3.2.25",
     "express": "^4.18.3",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
@@ -50,7 +51,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^7.0.2",
-    "pg": "^8.11.3",
+    "pg": "^8.15.6",
     "pg-hstore": "^2.3.4",
     "qrcode": "^1.5.3",
     "sequelize": "^6.37.1",
