--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "chai": "^5.2.0",
     "sinon": "^20.0.0"
   }
