--- a/vercel.json
+++ b/vercel.json
@@ -3,22 +3,17 @@
   "builds": [
     { 
       "src": "api/index.js", 
-      "use": "@vercel/node",
-      "config": {
-        "build": {
-          "commands": [
-            "cd server && npm run build && npm run db:migrate:prod && npm run db:seed:prod"
-          ]
-        }
-      }
+      "use": "@vercel/node"
     },
     { "src": "client/dist/**", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/index.js" },
-    { "src": "/(.*)", "dest": "client/dist/$1" }
+    { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "src": "/(.*)", "dest": "/client/dist/$1", "continue": true },
+    { "src": "/(.*)", "status": 404, "dest": "/client/dist/index.html" }
   ],
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "public": true
 } 
