fix: corrigido vercel.json removendo propriedade authentication inválida

--- a/vercel.json
+++ b/vercel.json
@@ -15,12 +15,5 @@
   "env": {
     "NODE_ENV": "production"
   },
-  "public": true,
-  "authentication": {
-    "deployment": {
-      "standard": false,
-      "preview": false,
-      "production": false
-    }
-  }
+  "public": true
 } 
