--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,10 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
+    { "src": "/assets/(.*)", "dest": "/client/dist/assets/$1" },
+    { "src": "/favicon.ico", "dest": "/client/dist/favicon.ico" },
     { "src": "/(.*)", "dest": "/client/dist/$1", "continue": true },
-    { "src": "/(.*)", "status": 404, "dest": "/client/dist/index.html" }
+    { "src": "/(.*)", "dest": "/client/dist/index.html" }
   ],
   "env": {
     "NODE_ENV": "production"
