--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
     { "src": "/api/(.*)", "dest": "/api/index.js" },
     { "src": "/assets/(.*)", "dest": "/client/dist/assets/$1" },
     { "src": "/favicon.ico", "dest": "/client/dist/favicon.ico" },
-    { "src": "/(.*)", "dest": "/client/dist/$1", "continue": true },
+    { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/client/dist/index.html" }
   ],
   "env": {
