--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,15 @@
   "version": 2,
   "builds": [
     { 
-      "src": "api/index.js", 
+      "src": "index.js",
       "use": "@vercel/node"
-    },
-    { "src": "client/dist/**", "use": "@vercel/static" }
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/assets/(.*)", "dest": "/client/dist/assets/$1" },
-    { "src": "/favicon.ico", "dest": "/client/dist/favicon.ico" },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/client/dist/index.html" }
+    { 
+      "src": "/(.*)", 
+      "dest": "index.js"
+    }
   ],
   "env": {
     "NODE_ENV": "production"
