--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,19 @@
     { 
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
-    { 
-      "src": "/(.*)", 
-      "dest": "index.js"
-    }
+    { "src": "/api/(.*)", "dest": "/index.js" },
+    { "src": "/assets/(.*)", "dest": "/client/dist/assets/$1" },
+    { "src": "/(.*)", "dest": "/index.js" }
   ],
   "env": {
     "NODE_ENV": "production"
