--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^6.20.1",
     "react-to-print": "^3.1.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "uuid": "^11.1.0",
     "yup": "^1.3.2"
   },
