--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "install:all": "npm install && cd server && npm install && cd ../client && npm install",
-    "build:client": "cd client && npm install && npm run build",
+    "build:client": "cd client && npm install && npx vite build",
     "build:server": "cd server && npm run build",
     "build": "npm run build:client",
     "start": "node index.js",
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "chai": "^5.2.0",
-    "sinon": "^20.0.0"
+    "sinon": "^20.0.0",
+    "vite": "^5.0.0"
   }
 }
