--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,8 @@
     "@mui/x-date-pickers": "^8.2.0",
     "@mui/x-date-pickers-pro": "^8.2.0",
     "@reduxjs/toolkit": "^2.7.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "alitools-b2b": "file:..",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.6",
     "date-fns": "^4.1.0",
@@ -42,6 +44,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "uuid": "^11.1.0",
+    "vite": "^5.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -50,7 +53,6 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
@@ -59,7 +61,6 @@
     "jsdom": "^24.0.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.0",
     "vitest": "^1.0.0"
   }
 }
