--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "AliTools B2B E-commerce Platform - Client",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "npx vite build",
@@ -43,6 +44,7 @@
     "react-to-print": "^3.1.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
+    "terser": "^5.25.0",
     "uuid": "^11.1.0",
     "vite": "^5.0.0",
     "yup": "^1.3.2"
