--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,17 @@
     { 
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "client/dist/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/index.js" },
-    { "src": "/(.*)", "dest": "/index.js" }
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/client/dist/$1" },
+    { "src": "/", "dest": "/client/dist/index.html" }
   ],
   "env": {
     "NODE_ENV": "production"
