--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/(assets|api)/.*", "destination": "/$1/$2" },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
   "headers": [
@@ -10,11 +11,18 @@
       ]
     },
     {
+      "source": "/(.*)\\.(js|css|png|jpg|jpeg|gif|svg|webp|ico|woff|woff2|ttf|otf)",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         { "key": "X-Content-Type-Options", "value": "nosniff" },
         { "key": "X-Frame-Options", "value": "DENY" },
-        { "key": "X-XSS-Protection", "value": "1; mode=block" }
+        { "key": "X-XSS-Protection", "value": "1; mode=block" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" }
       ]
     }
   ],
