--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
-    "vercel-build": "npx vite build",
+    "build": "vite build",
+    "vercel-build": "vite build",
     "serve": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
