--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,18 @@
 {
   "version": 2,
   "builds": [
-    { 
-      "src": "index.js",
-      "use": "@vercel/node"
-    },
     {
-      "src": "client/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "client/dist"
       }
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/index.js" },
     { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/client/dist/$1" }
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ],
   "env": {
     "NODE_ENV": "production"
