--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ dist/
 build/
 out/
 .next/
+client/dist/
+server/dist/
+.vite/
+client/.vite/
 
 # Local env files
 .env
@@ -18,6 +22,7 @@ out/
 
 # Testing
 coverage/
+__tests__/
 
 # Logs
 logs/
@@ -26,38 +31,37 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 dev-debug.log
-
-# Dependency directories
-node_modules/
-
-# Environment variables
-.env
+.vercel/**/*.log*
 
 # Editor directories and files
-.idea
-.vscode
+.idea/
+.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+*.swp
+*.swo
 
 # OS specific
 .DS_Store
 Thumbs.db
+desktop.ini
+
+# Vercel
+.vercel
+.vercelignore
+
+# Cursor specific (contains API keys)
+.cursor/mcp.json
+.cursorrules 
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
 
 # Task files
 tasks.json
 tasks/
-
-# IDE specific
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# Cursor specific (contém chaves de API)
-.cursor/mcp.json
-.cursorrules 
-.vercel
-.env*.local
