--- a/package.json
+++ b/package.json
@@ -6,36 +6,36 @@
   "type": "module",
   "scripts": {
     "install:all": "npm install && cd server && npm install && cd ../client && npm install",
-    "build:client": "cd client && npm install && npx vite build",
+    "build:client": "cd client && npm install && npm run build",
     "build:server": "cd server && npm run build",
     "build": "npm run build:client",
     "start": "node index.js",
     "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
     "test": "cd server && npm test",
-    "vercel-build": "echo 'Running build' && npm run build:client && echo 'Build completed successfully'",
+    "vercel-build": "cd client && npm install && npm run build",
     "steps": "node tasks/step-tracker.js",
-    "steps:report": "node -e \"try { import('./tasks/step-tracker.js').then(tracker => { const tasks = tracker.parseStepsFile(); tracker.displayProgressReport(tasks); }).catch(e => console.error('Error loading steps tracker:', e.message)); } catch(e) { console.error('Error loading steps tracker:', e.message); }\""
+    "steps:report": "node -e \"try { import('./tasks/step-tracker.js').then(tracker => { const tasks = tracker.parseStepsFile(); tracker.displayProgressReport(tasks); }).catch(e => console.error('Error loading step tracker:', e)); } catch (err) { console.error('Error running steps report:', err); }\"",
+    "check:env": "node scripts/env-check.js",
+    "predeploy": "npm run check:env",
+    "deploy": "bash ./deploy.sh",
+    "deploy:vercel": "vercel --prod",
+    "vercel:logs": "vercel logs",
+    "vercel:list": "vercel list"
   },
   "keywords": [
-    "b2b",
     "ecommerce",
+    "b2b",
     "tools",
-    "wholesale"
+    "alitools"
   ],
-  "author": "AliTools",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2",
-    "express": "^4.21.2",
-    "recharts": "^2.15.3"
+    "chalk": "^5.3.0",
+    "concurrently": "^8.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   },
-  "engines": {
-    "node": ">=16.x"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.52.0",
-    "chai": "^5.2.0",
-    "sinon": "^20.0.0",
-    "vite": "^5.0.0"
-  }
+  "devDependencies": {}
 }
