--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,10 @@
     "terser": "^5.25.0",
     "uuid": "^11.1.0",
     "vite": "^5.0.0",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.33",
+    "autoprefixer": "^10.4.17"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.7",
@@ -55,14 +58,11 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.17",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^24.0.0",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
     "vitest": "^1.0.0"
   }
 }
