--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,40 @@
   "version": 2,
   "builds": [
     { 
-      "src": "index.js",
+      "src": "server/index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/index.js" },
-    { "src": "/(.*)", "dest": "/index.js" }
+    { "src": "/api/(.*)", "dest": "/server/index.js" },
+    { 
+      "src": "^/static/(.*)",
+      "dest": "/client/dist/static/$1"
+    },
+    { 
+      "src": "^/favicon.ico",
+      "dest": "/client/dist/favicon.ico"
+    },
+    { 
+      "src": "^/manifest.json",
+      "dest": "/client/dist/manifest.json"
+    },
+    { 
+      "src": "^/assets/(.*)",
+      "dest": "/client/dist/assets/$1"
+    },
+    { 
+      "src": "/(.*)", 
+      "dest": "/client/dist/index.html",
+      "headers": { "cache-control": "s-maxage=0" }
+    }
   ],
   "env": {
     "NODE_ENV": "production"
