--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {}
+    "express": "^4.21.2",
+    "helmet": "^7.1.0"
+  }
 }
