--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "install:all": "npm install && cd server && npm install && cd ../client && npm install",
     "build:client": "cd client && npm install && npm run build",
-    "build:server": "cd server && npm run build",
+    "build:server": "cd server && npm install && npm run build",
     "build": "npm run build:client",
     "start": "node index.js",
     "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
     "test": "cd server && npm test",
-    "vercel-build": "cd client && npm install && npm run build && cd ../server && npm install && npm run build",
+    "vercel-build": "npm run build:client && npm run build:server",
     "steps": "node tasks/step-tracker.js",
     "steps:report": "node -e \"try { import('./tasks/step-tracker.js').then(tracker => { const tasks = tracker.parseStepsFile(); tracker.displayProgressReport(tasks); }).catch(e => console.error('Error loading step tracker:', e)); } catch (err) { console.error('Error running steps report:', err); }\"",
     "check:env": "node scripts/env-check.js",
