--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     { 
       "src": "index.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "buildCommand": "npm run build:client && npm run build:server"
+      }
     }
   ],
   "routes": [
