--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
   "builds": [
     { 
       "src": "index.js",
-      "use": "@vercel/node",
-      "config": {
-        "buildCommand": "npm run build:client && npm run build:server"
-      }
+      "use": "@vercel/node"
     }
   ],
   "routes": [
