--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "vercel:logs": "vercel logs",
     "vercel:list": "vercel list",
     "deploy:fix": "node deploy-fix.js",
-    "test:deployment": "node test-deployment.js"
+    "test:deployment": "node test-deployment.js",
+    "db:check-storage": "node server/src/scripts/storage-management.js check",
+    "db:cleanup": "node server/src/scripts/storage-management.js cleanup",
+    "db:backup": "node server/src/scripts/storage-management.js backup",
+    "db:storage-test": "node server/src/scripts/test-storage-management.js all",
+    "db:import-xml": "node server/src/scripts/direct-import-xml.js"
   },
   "keywords": [
     "ecommerce",
@@ -37,8 +42,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
+    "fast-xml-parser": "^5.2.2",
     "helmet": "^7.1.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "pg": "^8.15.6",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "node-fetch": "^2.7.0"
