--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "vercel-build": "vite build",
+    "build:vercel": "vite build",
     "serve": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -27,16 +28,23 @@
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^8.2.0",
     "@mui/x-date-pickers-pro": "^8.2.0",
-    "@react-three/drei": "^10.0.7",
-    "@react-three/fiber": "^9.1.2",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.6",
+    "@react-three/drei": "^9.91.0",
+    "@react-three/fiber": "^8.15.16",
     "@reduxjs/toolkit": "^2.7.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.5",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.510.0",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -49,9 +57,11 @@
     "react-to-print": "^3.1.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "terser": "^5.25.0",
-    "three": "^0.176.0",
+    "three": "^0.160.0",
     "uuid": "^11.1.0",
     "vite": "^5.0.0",
     "yup": "^1.3.2"
