--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,18 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "**", "use": "@vercel/static" }
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store, no-cache" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" }
+      ]
+    }
   ],
   "rewrites": [
-    { "source": "/assets/(.*)", "destination": "/assets/$1" },
+    { "source": "/(.*\\.(js|css|ico|png|jpg|svg|woff|woff2|ttf|otf|webp)$)", "destination": "/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
