--- a/.vercelignore
+++ b/.vercelignore
@@ -1,4 +1,3 @@
-
 # Dependencies
 **/node_modules
 
@@ -22,3 +21,15 @@ CHANGELOG.md
 
 # Documentation
 docs/
+docs.old/
+
+# Large files
+*.xml
+geko_transformed_data.json
+
+# Test files
+test-*.js
+*-debug.js
+
+# Scripts that aren't needed in production
+scripts/
