--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,15 @@
 {
   "version": 2,
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "no-store, no-cache" },
-        { "key": "X-Content-Type-Options", "value": "nosniff" }
-      ]
+  "builds": [
+    { 
+      "src": "index.js",
+      "use": "@vercel/node"
     }
   ],
-  "rewrites": [
-    { "source": "/(.*\\.(js|css|ico|png|jpg|svg|woff|woff2|ttf|otf|webp)$)", "destination": "/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.js" }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
