--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.5",
+    "framer-motion": "^10.18.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.510.0",
     "postcss": "^8.4.33",
