--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,24 @@
     { 
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.js" }
+    {
+      "src": "/api/(.*)",
+      "dest": "https://seu-backend-url.vercel.app/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/client/$1"
+    }
   ],
   "env": {
     "NODE_ENV": "production"
