--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,12 @@
   ],
   "routes": [
     {
+      "src": "/api/v1/cart/(.*)",
+      "dest": "/api/v1/cart/$1"
+    },
+    {
       "src": "/api/(.*)",
-      "dest": "https://seu-backend-url.vercel.app/api/$1"
+      "dest": "/api/$1"
     },
     {
       "src": "/(.*)",
